...
import androidx.compose.ui.draw.clip
import androidx.compose.ui.platform.testTag
import androidx.compose.ui.res.painterResource
import androidx.compose.ui.res.stringResource
import br.com.rbrthmn.ui.R

const val BANKS_DROPDOWN_MENU_TAG = "banks_dropdown_menu"

@Composable
fun BanksDropdownMenu(
    onBankSelected: (Int, String) -> Unit,
    isValid: Boolean,
    modifier: Modifier = Modifier
...
