...

    <string name="brl_currency">R$</string>
    <string name="add_icon_description">Ícone de mais</string>
    <string name="bank_hint">Banco</string>
    <string name="drop_down_arrow_icon_description">Ícone de flecha para baixo</string>

    <string name="cancel_button">Cancelar</string>
    <string name="save_button">Salvar</string>
    <string name="colon" translatable="false">:</string>

    <string name="current_month_button">Mês atual</string>
    <string name="apply_date_button">Aplicar</string>

    <string name="reserve_hint">Reserva</string>
...
