...
import br.com.rbrthmn.ui.components.DecimalInputField
import org.koin.androidx.compose.koinViewModel
import java.time.LocalDate
import br.com.rbrthmn.home.ui.components.creditcardbillscard.CreditCardBillsCardContract as Contract
import br.com.rbrthmn.ui.R as commonR

const val ADD_CARD_DIALOG_TAG = "add_card_dialog"
const val BILL_CLOSE_DAY_DROPDOWN_MENU_TAG = "bill_close_day_dropdown_menu"

@Composable
fun CreditCardBillsCard(
    modifier: Modifier = Modifier,
    viewModel: Contract.ViewModel = koinViewModel(),
    currentDateFilter: LocalDate
...
